# blueprint

.github/workflows/: lint.yml
blueprint/: blueprint.cpp  blueprint.h
blueprint/core/: blueprint_EcmascriptEngine.cpp  blueprint_ReactApplicationRoot.h  blueprint_ShadowView.cpp  blueprint_ShadowView.h  blueprint_TextShadowView.h  blueprint_TimeoutFunctionManager.h  blueprint_View.cpp  blueprint_ViewManager.cpp
blueprint/tests/: blueprint_EcmascriptEngineTests.cpp
examples/GainPlugin/: CMakeLists.txt
examples/GainPlugin/jsui/: babel.config.js  package-lock.json  package.json
examples/GainPlugin/jsui/src/: App.js  Label.js  Meter.js  Slider.js
examples/LayoutStress/: CMakeLists.txt  Main.cpp  MainComponent.cpp  MainComponent.h
examples/LayoutStress/jsui/: package-lock.json  package.json
examples/LayoutStress/jsui/src/: App.js
examples/TestRunner/: CMakeLists.txt  Main.cpp  blueprint  juce
